--- a/contact.html
+++ b/contact.html
@@ -15,43 +15,45 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 <body>
-		<header>
+	<header>
 		<nav class="navbar navbar-expand-md bg-light navbar-light fixed-top" id="navbar">
-		<div class="container" style="flex-wrap: nowrap;padding-left: 0 !important;padding-right: 0 !important;">
-	    <a class="navbar-brand" href="#"><img src="giroux-new-logo.png" style="width: 30%;" class="img-fluid" id="logo"></a>
-	   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-	    <span class="navbar-toggler-icon"></span>
-	   </button>
+		<div class="container">
+		<a class="navbar-brand" href="#"><img src="giroux-new-logo.png" style="width: 30%;" class="img-fluid" id="logo">
+			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" style="position:relative; left: 50%;" data-target="#collapsibleNavbar">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+		</a>
+	   
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-	    <ul class="navbar-nav ml-auto">
-	      <li class="nav-item">
-	        <a class="nav-link" href="index.html">Home</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="about.html">About</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	              <a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
-	                Services
-	              </a>
-	              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-	                <a class="dropdown-item" href="#">Residential Services</a>
-	                <a class="dropdown-item" href="#">Commercial Services</a>
-	              </div>
-	            </li>
-	        <li class="nav-item">
-	        <a class="nav-link" href="Carriers.html">Carriers</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Edison VS Tesla</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="blog.html">Blog</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link active" href="contact.html">Contact</a>
-	      </li>
-	    </ul>
+		<ul class="navbar-nav ml-auto">
+		  <li class="nav-item">
+			<a class="nav-link active" href="index.html">Home</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="about.html">About</a>
+		  </li>
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="services.html" id="navbarDropdown" role="button"  aria-haspopup="true" aria-expanded="false">
+			  Services
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			  <a class="dropdown-item" href="#">Residential Services</a>
+			  <a class="dropdown-item" href="#">Commercial Services</a>
+			</div>
+		  </li>
+			<li class="nav-item">
+			<a class="nav-link" href="Carriers.html">Carriers</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="#">Edison VS Tesla</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="blog.html">Blog</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="contact.html">Contact</a>
+		  </li>
+		</ul>
 	  </div>
 	</div>
 	</nav>
