--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<header>
+<header>
 	<nav class="navbar navbar-expand-md bg-light navbar-light fixed-top" id="navbar">
-	<div class="container" style="flex-wrap: nowrap;padding-left: 0 !important;padding-right: 0 !important;">
-    <a class="navbar-brand" href="#"><img src="giroux-new-logo.png" style="width: 30%;" class="img-fluid" id="logo"></a>
-   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" style="position: relative;bottom: 5%;" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-   </button>
+	<div class="container">
+    <a class="navbar-brand" href="#"><img src="giroux-new-logo.png" style="width: 30%;" class="img-fluid" id="logo">
+		<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" style="position:relative; left: 50%;" data-target="#collapsibleNavbar">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+	</a>
+   
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
@@ -57,6 +59,7 @@
 </nav>
 </header>
 
+
 <section>
 		<div class="back1" style="z-index: -10;">
 			<div class="back2">
@@ -81,7 +84,7 @@
 
 <section>
 	<div class="container-fluid p-0 m-0 sect1">
-		<div class="row justify-content-around">
+		<div class="justify-content-around" style="display: flex;flex-wrap: wrap;">
 			<div class="col-lg-3 col-md-12 col-sm-12 my-3 f1 my-3">
 				<div class="box1">
 					<p class="para1">Price</p>
